orchestration service completed with UI